--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "apexcharts": "^4.1.0",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1",
     "yup": "^1.6.1"
