--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-jvectormap/world": "^1.1.2",
     "@supabase/supabase-js": "^2.51.0",
     "apexcharts": "^4.1.0",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "lodash": "^4.17.21",
