--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@config/*": ["src/config/*"]
+      "@config/*": ["src/config/*"],
+      "@components/*": ["src/components/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@utils/*": ["src/utils/*"],
+      "@pages/*": ["src/pages/*"]
     },
-     "moduleResolution": "Node",
+    "moduleResolution": "Node",
     "allowJs": true,
     "resolveJsonModule": true
   }
