--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "^2.51.0",
     "apexcharts": "^4.1.0",
     "axios": "^1.11.0",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "lodash": "^4.17.21",
